# acts

./: CMakeLists.txt
CI/clang_tidy/: requirements.txt
CI/fpe_masks/: requirements.txt
Core/include/Acts/Utilities/detail/: ReferenceWrapperAnyCompat.hpp
Examples/Python/tests/: requirements.txt
Examples/Scripts/: requirements.txt
Plugins/Cuda/: CMakeLists.txt
Plugins/Cuda/include/Acts/Plugins/Cuda/: Cuda.hpp
Plugins/Cuda/include/Acts/Plugins/Cuda/Seeding/: FindDublets.hpp  FindTriplets.hpp  ISeedCollector.hpp  SeedCollector.hpp  SeedCollector.ipp  SeedFilterConfig.hpp  SeedFinder.ipp  Seedfinder.hpp  Seedfinder.ipp  Types.hpp
Plugins/Cuda/include/Acts/Plugins/Cuda/Seeding2/: SeedFinder.hpp  SeedFinder.ipp
Plugins/Cuda/include/Acts/Plugins/Cuda/Seeding2/Details/: CountDublets.hpp  FindDublets.hpp  FindTriplets.hpp  Types.hpp
Plugins/Cuda/include/Acts/Plugins/Cuda/Utilities/: Arrays.hpp  Arrays.ipp  CopyFunctions.cuh  CopyFunctions.ipp  CudaMatrix.cu  CudaVector.cu  DeviceMatrix.cuh  DeviceMatrix.ipp  DeviceMemory.hpp  DeviceVector.ipp  HostMatrix.cuh  HostMatrix.hpp  HostMatrix.ipp  HostMemory.hpp  HostVector.cuh  HostVector.ipp  Info.hpp  MatrixMacros.hpp  MemoryManager.hpp  ResultScalar.ipp
Plugins/Cuda/src/Seeding/: FindDublets.cu  FindTriplets.cu  Kernels.cu
Plugins/Cuda/src/Seeding2/: CountDublets.cu  FindDublets.cu  FindTriplets.cu  TripletHelpers.cu  TripletHelpers.cuh
Plugins/Cuda/src/Utilities/: Arrays.cu  DeviceMemory.cu  HostMatrix.cu  HostMemory.cu  MemoryManager.cu  ResultScalar.cu
Plugins/Sycl/: CMakeLists.txt
Plugins/Sycl/include/Acts/Plugins/Sycl/Seeding/: CreateSeedsForGroupSycl.hpp  Seedfinder.hpp  Seedfinder.ipp
Plugins/Sycl/src/Seeding/: CreateSeedsForGroupSycl.cpp  DupletSearch.hpp
Python/Examples/tests/: requirements.txt
Tests/UnitTests/Plugins/Cuda/Seeding/: SeedfinderCudaTest.cpp
Tests/UnitTests/Plugins/Cuda/Utilities/: CMakeLists.txt  HostMemory.cpp  MatrixTests.cu  TripletHelpersTests.cu
Tests/UnitTests/Plugins/Sycl/Seeding/: SeedfinderSyclTest.cpp
cmake/: ActsVecMem.cmake
docs/: requirements.txt
